--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.testing123.sacral123</groupId>
-    <artifactId>CT1-107</artifactId>
+    <groupId>com.test15</groupId>
+    <artifactId>CT1-111</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
