--- a/template.yml
+++ b/template.yml
@@ -1,15 +1,15 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: AWS Serverless Spring Boot 2 API - com.testing123.sacral123::CT1-107
+Description: AWS Serverless Spring Boot 2 API - com.test15::CT1-111
 Globals:
   Api:
     EndpointConfiguration: REGIONAL
 
 Resources:
-  Ct1107Function:
+  Ct1111Function:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: com.testing123.sacral123.StreamLambdaHandler::handleRequest
+      Handler: com.test15.StreamLambdaHandler::handleRequest
       Runtime: java11
       CodeUri: .
       MemorySize: 512
@@ -23,8 +23,8 @@ Resources:
             Method: any
 
 Outputs:
-  Ct1107Api:
+  Ct1111Api:
     Description: URL for application
     Value: !Sub 'https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/ping'
     Export:
-      Name: Ct1107Api
+      Name: Ct1111Api
